project/test/semantics/good/input/Good46_shouldHandleSettersForAttributesInheritedFromSuperclasses.ty
immutable class Product {
    
    values: {
        id: Int = 1342;
    }
    
    variables: {
        price: Int = 2000;
    }
}


mutable class Device extends Product {
    
    values: {
        serialNumber: String = "3838DJ323";
    }
    
    variables: {
        manufacturer: String = "Dell";
        model: String = "233X";
    }
}

immutable class Laptop extends Device {
    
    values: {
        displaySize: Int;
        displayType: String;
        processor: String;
        ramGb: Int;
    }
}

singleton class Inheritance {
    
    actions: {
        main: () -> Void = {
            val laptop: Laptop = Laptop(17, "IPS", "i7", 8);
            
            System#assertEquals(2000, laptop.price)
            System#assertEquals("Dell", laptop.manufacturer)
            
            laptop#manufacturer("Huawei")
            laptop#price(1500)
            
            System#assertEquals(1500, laptop.price)
            System#assertEquals("Huawei", laptop.manufacturer)
        }
    }
}
