project/test/semantics/bad/input/Bad80_shouldThrowIllegalInheritanceErrorForSingletonAndNormal.ty
immutable class Product {
    
    values: {
        id: Int;
        price: Int = 2000;
    }
}


singleton class Device extends Product { // IllegalInheritanceError
    
    values: {
        serialNumber: String = "3838DJ323";
        manufacturer: String = "X";
        model: String = "233X";
    }
}

immutable class Laptop extends Device {
    
    values: {
        displaySize: Int;
        displayType: String;
        processor: String = "i7";
        ramGb: Int;
    }
}

singleton class Inheritance {
    
    actions: {
        main: () -> Void = Pass
    }
}
